--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic&amp;subset=latin,latin-ext'
         rel='stylesheet' type='text/css'>
-    
+
     <link rel="stylesheet" href="assets/plugins/nivo-lightbox/nivo-lightbox.css" />
     <link rel="stylesheet" href="assets/plugins/nivo-lightbox/themes/default/default.css" />
     <link rel="stylesheet" href="assets/css/main.css">
@@ -186,8 +186,10 @@
                                     <p>
                                         Hi! I'm Aniket, a Junior Undergrad student at the National Institute of
                                         Technology
-                                        Durgapur. My primary interests lie in <a>Machine Learning</a> and <a>Distributed
-                                            Systems</a>.
+                                        Durgapur. My primary interests lie in <span
+                                            class="t-primary-color">Networking</span> and <span
+                                            class="t-primary-color">Distributed Systems</span>, and <span
+                                            class="t-primary-color">Machine Learning</span>.
                                         Working as a part-time Freelancer provided me the experience of a
                                         Web Developer too. I see myself as a researcher in the upcoming years.
                                     </p>
@@ -386,6 +388,40 @@
                     <div class="o-section__content  t-section__content  u-pb-0">
 
                         <div class="a-experience-timeline  c-timeline  t-border-color">
+                            <div class="c-timeline__item">
+                                <div class="c-timeline__point  t-timeline__point  t-primary-bg"></div>
+                                <div class="o-content">
+                                    <div class="o-grid">
+                                        <div class="o-grid__col-md-5">
+                                            <div class="c-work__timeframe">
+                                                May, 2021 &ndash; Present
+                                            </div>
+                                            <h3 class="c-work__heading">
+                                                Google Summer of Code
+                                            </h3>
+                                            <h4 class="c-work__title">
+                                                Student Developer
+                                            </h4>
+                                            <div class="c-work__location">
+                                                Remote
+                                            </div>
+                                        </div>
+                                        <div class="o-grid__col-md-7">
+                                            <p>
+                                                Creating a new cross-platform solution API from an open-sourced ML model
+                                                so that developers can use the API to integrate an off-the-shelf
+                                                MediaPipe Solution in their own language without requiring to compile
+                                                the MediaPipe Source code with Bazel. The cross-platform API would
+                                                reduce barriers to public user adoption.<br>
+
+                                                <a
+                                                    href="https://summerofcode.withgoogle.com/projects/#6647141012865024">Project
+                                                    Link</a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
                             <div class="c-timeline__item">
                                 <div class="c-timeline__point  t-timeline__point  t-primary-bg"></div>
@@ -404,13 +440,19 @@
                                         </div>
                                         <div class="o-grid__col-md-7">
                                             <p>
-                                                Responsible for designing and building a Full Stack Web App for a US-based Real-Estate Rental Business.<br>
+                                                Responsible for designing and building a Full Stack Web App for a
+                                                US-based Real-Estate Rental Business.<br>
                                                 Improved response time, performance, and user experience by deploying
                                                 CDN endpoints.<br>
-                                                Improved response time by 160% on leveraging CDN endpoints to distribute assets across geographies.<br>
-                                                Integrated Twilio SendGrid with Django Backend for sending important emails to customers.<br>
-                                                Architected the Payment Gateway with Stripe for incoming payments and sending regular payouts.<br>
-                                                Implemented and configured Serverless Application with the help of Azure Logic App for performing routine tasks.<br>
+                                                Improved response time by 160% on leveraging CDN endpoints to distribute
+                                                assets across geographies.<br>
+                                                Integrated Twilio SendGrid with Django Backend for sending important
+                                                emails to customers.<br>
+                                                Architected the Payment Gateway with Stripe for incoming payments and
+                                                sending regular payouts.<br>
+                                                Implemented and configured Serverless Application with the help of Azure
+                                                Logic App for performing routine tasks.<br>
+                                                <a href="https://www.directoffices.com/">Project Link</a>
                                             </p>
                                         </div>
                                     </div>
@@ -511,8 +553,8 @@
                                             </div>
                                             <div class="o-grid__col-md-7">
                                                 <p>
-                                                    Pursuing <a>B.Tech</a> in Computer Science and Engineering.<br>
-                                                    Having a cumulative GPA of <a>8.56/10.0</a>
+                                                    Pursuing <span class="t-primary-color">B.Tech</span> in Computer Science and Engineering.<br>
+                                                    Having a cumulative GPA of <span class="t-primary-color">8.55</span>
                                                 </p>
                                             </div>
                                         </div>
@@ -687,6 +729,23 @@
                     <div class="o-section__content  t-section__content  o-section__full-bottom-space">
 
                         <div class="o-grid  o-grid--gallery">
+                            
+                            <div class="o-grid__col-sm-6">
+                                <a class="c-image-overlay  t-image-overlay  js-lightbox"
+                                    href="https://mediapipe.dev/" target="_blank"
+                                    data-lightbox-gallery="portfolio">
+                                    <img src="assets/images/portfolio/MediaPipe.png" alt="">
+                                    <div class="c-image-overlay__content">
+                                        <h3>
+                                            MediaPipe (Google, LLC)
+                                        </h3>
+                                        <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
+                                        <p>
+                                            MediaPipe offers cross-platform, customizable ML solutions for live and streaming media.
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
 
                             <div class="o-grid__col-sm-6">
                                 <a class="c-image-overlay  t-image-overlay  js-lightbox"
