--- a/index.html
+++ b/index.html
@@ -408,14 +408,16 @@
                                         </div>
                                         <div class="o-grid__col-md-7">
                                             <p>
+                                                Organiztion: <a href="https://mediapipe.dev/" target="_blank">MediaPipe (Google, LLC)
+                                                </a><br><br>
                                                 Creating a new cross-platform solution API from an open-sourced ML model
                                                 so that developers can use the API to integrate an off-the-shelf
                                                 MediaPipe Solution in their own language without requiring to compile
                                                 the MediaPipe Source code with Bazel. The cross-platform API would
                                                 reduce barriers to public user adoption.<br>
 
-                                                <a
-                                                    href="https://summerofcode.withgoogle.com/projects/#6647141012865024">Project
+                                                <a href="https://summerofcode.withgoogle.com/projects/#6647141012865024"
+                                                    target="_blank">Project
                                                     Link</a>
                                             </p>
                                         </div>
@@ -452,7 +454,8 @@
                                                 sending regular payouts.<br>
                                                 Implemented and configured Serverless Application with the help of Azure
                                                 Logic App for performing routine tasks.<br>
-                                                <a href="https://www.directoffices.com/">Project Link</a>
+                                                <a href="https://www.directoffices.com/" target="_blank">Project
+                                                    Link</a>
                                             </p>
                                         </div>
                                     </div>
@@ -553,7 +556,8 @@
                                             </div>
                                             <div class="o-grid__col-md-7">
                                                 <p>
-                                                    Pursuing <span class="t-primary-color">B.Tech</span> in Computer Science and Engineering.<br>
+                                                    Pursuing <span class="t-primary-color">B.Tech</span> in Computer
+                                                    Science and Engineering.<br>
                                                     Having a cumulative GPA of <span class="t-primary-color">8.55</span>
                                                 </p>
                                             </div>
@@ -583,7 +587,7 @@
                                                 <p>
                                                     Had Physics, Chemistry, Mathematics, Computer Science and Physical
                                                     Education as my primary subjects.<br>
-                                                    Scored <a>89.6&percnt;</a> in All India Senior School Certificate
+                                                    Scored <span class="t-primary-color">89.6&percnt;</span> in All India Senior School Certificate
                                                     Examination.
                                                 </p>
                                             </div>
@@ -729,11 +733,10 @@
                     <div class="o-section__content  t-section__content  o-section__full-bottom-space">
 
                         <div class="o-grid  o-grid--gallery">
-                            
+
                             <div class="o-grid__col-sm-6">
-                                <a class="c-image-overlay  t-image-overlay  js-lightbox"
-                                    href="https://mediapipe.dev/" target="_blank"
-                                    data-lightbox-gallery="portfolio">
+                                <a class="c-image-overlay  t-image-overlay  js-lightbox" href="https://mediapipe.dev/"
+                                    target="_blank" data-lightbox-gallery="portfolio">
                                     <img src="assets/images/portfolio/MediaPipe.png" alt="">
                                     <div class="c-image-overlay__content">
                                         <h3>
@@ -741,7 +744,8 @@
                                         </h3>
                                         <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                         <p>
-                                            MediaPipe offers cross-platform, customizable ML solutions for live and streaming media.
+                                            MediaPipe offers cross-platform, customizable ML solutions for live and
+                                            streaming media.
                                         </p>
                                     </div>
                                 </a>
