Updated Blog Links, Email, and profile section

--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
                                         <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                             <div class="a-header  o-content">
                                                 <div class="o-content__body">
-                                                    <a href="https://www.aniketiq.me/" class="t-link-container">
+                                                    <a href="https://aniketiq.me/" class="t-link-container">
                                                         <h4>Website</h4>
                                                         <p>
                                                             <span class="t-link-container__item--blended">
-                                                                www.aniketiq.me
+                                                                aniketiq.me
                                                             </span>
                                                         </p>
                                                     </a>
@@ -148,11 +148,11 @@
                                         <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                             <div class="a-header  o-content">
                                                 <div class="o-content__body">
-                                                    <a href="mailto:aniketray@aniketiq.me" class="t-link-container">
+                                                    <a href="mailto:aniketiq@gmail.com" class="t-link-container">
                                                         <h4>Email</h4>
                                                         <p>
                                                             <span class="t-link-container__item--blended">
-                                                                aniketray@aniketiq.me
+                                                                aniketiq@gmail.com
                                                             </span>
                                                         </p>
                                                     </a>
@@ -193,6 +193,9 @@
                                         Working as a part-time Freelancer provided me the experience of a
                                         Web Developer too. I see myself as a researcher in the upcoming years.
                                     </p>
+                                    <div style="padding-top: 20px ;">
+                                    <h3 ><a href="https://blog.aniketiq.me/">Checkout my Dev Blogs</a></h3>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -408,7 +411,8 @@
                                         </div>
                                         <div class="o-grid__col-md-7">
                                             <p>
-                                                Organiztion: <a href="https://mediapipe.dev/" target="_blank">MediaPipe (Google, LLC)
+                                                Organiztion: <a href="https://mediapipe.dev/" target="_blank">MediaPipe
+                                                    (Google, LLC)
                                                 </a><br><br>
                                                 Creating a new cross-platform solution API from an open-sourced ML model
                                                 so that developers can use the API to integrate an off-the-shelf
@@ -587,7 +591,8 @@
                                                 <p>
                                                     Had Physics, Chemistry, Mathematics, Computer Science and Physical
                                                     Education as my primary subjects.<br>
-                                                    Scored <span class="t-primary-color">89.6&percnt;</span> in All India Senior School Certificate
+                                                    Scored <span class="t-primary-color">89.6&percnt;</span> in All
+                                                    India Senior School Certificate
                                                     Examination.
                                                 </p>
                                             </div>
@@ -655,20 +660,20 @@
 
                             <div class="o-grid__col-xl-4  o-grid__col-sm-6">
                                 <div class="o-content">
-                                    <a href="https://www.researchgate.net/profile/Aniket_Ray3" target="_blank"
+                                    <a href="https://blog.aniketiq.me/" target="_blank"
                                         class="t-link-container">
                                         <div class="o-media  o-media--block">
                                             <div class="o-media__figure">
                                                 <div class="c-profile__icon">
-                                                    <i class="fab  fa-lg  fa-researchgate"></i>
+                                                    <i class="fas  fa-lg  fa-rss-square"></i>
                                                 </div>
                                             </div>
                                             <div class="o-media__body  o-content__body">
                                                 <h3 class="t-link-container__item">
-                                                    Research Gate
+                                                    Dev Blogs
                                                 </h3>
                                                 <p>
-                                                    Connecting with Scientists and Researchers.
+                                                    Writing for the new world audience.
                                                 </p>
                                             </div>
                                         </div>
@@ -832,11 +837,11 @@
                                 <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                     <div class="o-content">
                                         <div class="o-content__body">
-                                            <a href="https://www.aniketiq.me/" class="t-link-container">
+                                            <a href="https://aniketiq.me/" class="t-link-container">
                                                 <h4>Website</h4>
                                                 <p>
                                                     <span class="t-link-container__item--blended">
-                                                        www.aniketiq.me
+                                                        aniketiq.me
                                                     </span>
                                                 </p>
                                             </a>
@@ -847,11 +852,11 @@
                                 <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                     <div class="o-content">
                                         <div class="o-content__body">
-                                            <a href="mailto:aniketray@aniketiq.me" class="t-link-container">
+                                            <a href="mailto:aniketiq@gmail.com" class="t-link-container">
                                                 <h4>Email</h4>
                                                 <p>
                                                     <span class="t-link-container__item--blended">
-                                                        aniketray@aniketiq.me
+                                                        aniketiq@gmail.com
                                                     </span>
                                                 </p>
                                             </a>
